# zep

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cloud  Dockerfile.postgres  Dockerfile.postgres_flyio  Makefile  README.md  SECURITY.md  cloud_start.sh  conductor.json  config-beta.yaml  config.go  config.yaml  datastore.go  datastore_postgres.go  datastore_redis.go  depot.json  docker-compose-beta.yaml  docker-compose.ce.yaml  docker-compose.dev.yaml  docker-compose.yaml  docs.http  fly.toml  go.mod  go.sum  go.work  golangci.yaml  handlers.go  health_check.go  http-client.private.env.json  kubernetes-readme.md  long_term_memory.go  main.go  main.py  memory.go  memory.http  models.go  (+17 more)
.cursor/: mcp.json
benchmarks/locomo/: .gitignore  Makefile  README.md  benchmark.py  benchmark_config.yaml  common.py  config.py  constants.py  evaluation.py  ingestion.py  ontology.py  persistence.py  prompts.py  pyproject.toml
benchmarks/locomo/experiments/experiment_20251203_171523/: config.yaml  experiment_summary.json
benchmarks/locomo/experiments/experiment_20251203_184539/: config.yaml  experiment_summary.json
benchmarks/locomo/experiments/experiment_20251204_225237/: config.yaml  experiment_summary.json
benchmarks/locomo/experiments/experiment_20251207_182039/: config.yaml  experiment_summary.json
benchmarks/locomo/experiments/experiment_20251207_215609/: config.yaml  experiment_summary.json
benchmarks/locomo/tests/: __init__.py  test_common.py  test_config.py  test_persistence.py
benchmarks/locomo_eval/: README.md  pyproject.toml  zep_locomo_eval.py  zep_locomo_eval.py.ipynb  zep_locomo_ingestion.py  zep_locomo_responses.py  zep_locomo_search.py
benchmarks/locomo_eval/data/: zep_locomo_grades.json  zep_locomo_responses.json
benchmarks/longmemeval/: .gitignore  Makefile  README.md  analyze_dataset_sessions.py  bayesian_search.py  benchmark.py  benchmark_config.yaml  calculate_scores.py  clients.py  common.py  config.py  constants.py  evaluation.py  grid_search.py  grid_search_config.yaml  ingestion.py  persistence.py  pyproject.toml  queue_depth.py  reranker.py  search_config.yaml  session_analysis_summary.txt  summarization.py  utils.py  zep_longmem_eval.ipynb  zep_longmem_eval.py  zep_memgpt_eval.ipynb  zep_ontology.py
benchmarks/longmemeval/Zep Test Harness/: zep_eval.py  zep_responses.py
benchmarks/longmemeval/tests/: __init__.py  test_checkpoint.py  test_common.py  test_config.py  test_evaluation.py  test_integration.py  test_persistence.py
ingestion/: CHANGELOG.md  Makefile  README.md  SETUP.md  pyproject.toml
ingestion/examples/: README.md  documents_example.py  email_example.py  example_ontology.py  fact_triples_example.py  json_records_example.py  slack_export_example.py  thread_backfill_example.py  user_graph_example.py
ingestion/examples/data/: chat_history.jsonl  combined_threads.jsonl  deployment_notes.md  northwind_deployment_notes.md  org_chart.json  products.json
ingestion/examples/data/docs/: company_handbook.md  (+1 more)
ingestion/src/zep_ingest/: __init__.py  _errors.py  _io.py  _validation.py  exceptions.py  nodes.py  pipeline.py  protocols.py  result.py  threads.py  triples.py  types.py  verify.py
ingestion/tests/: conftest.py  test_basic.py  test_batch_submitter.py  test_canonicalizer.py  test_chunker.py  test_contextualizer.py  test_dispatch.py  test_email_loader.py  test_example_ontology.py  test_examples_data.py  test_exceptions.py  test_integration.py  test_io.py  test_json_normalizer.py  test_json_records_loader.py  test_limits.py  test_llm_adapters.py  test_nodes.py  test_pipeline.py  test_protocols.py  test_result.py  test_sequential_submitter.py  test_slack_loader.py  test_text_loader.py  test_threads.py  test_transcript_loader.py  test_triples.py  test_types.py  test_verify.py
integration/autogen/: README.md  pyproject.toml
integration/autogen/tests/: test_basic.py
integrations/ag2/python/: .env.example  CHANGELOG.md  README.md  SETUP.md  pyproject.toml
integrations/ms-agent-framework/python/: CHANGELOG.md  Makefile  README.md  SETUP.md  pyproject.toml
integrations/pydantic-ai/python/: CHANGELOG.md  Makefile  README.md  SETUP.md  pyproject.toml
integrations/python/zep_ag2/: .env.example  CHANGELOG.md  Makefile  README.md  pyproject.toml
integrations/python/zep_autogen/: CHANGELOG.md  Makefile  README.md  pyproject.toml
zep-eval-harness/: .env.example  .gitignore  README.md  checkpoint.py  constants.py  custom_instructions.py  ontology.py  pyproject.toml  requirements.txt  retry.py  user_summary_instructions.py  zep_chunk_documents.py  zep_evaluate.py  zep_graph_inspect.py  zep_ingest.py  zep_ingest_documents.py  zep_ingest_users.py
zep-eval-harness/config/: constants.py
zep-eval-harness/config/document_chunking_config/: constants.py  preprocess.py  source_description.py
zep-eval-harness/config/document_ingestion_config/: ontology.py
zep-eval-harness/config/evaluation/: constants.py  response_prompt.py
zep-eval-harness/config/evaluation_config/: constants.py
zep-eval-harness/config/user_ingestion_config/: custom_instructions.py  ontology.py
zep-eval-harness/data/: conversations.json  test_questions.csv  user_metadata.json  users.json  zep_evaluation_results.json
zep-eval-harness/data/conversations/: zep_eval_test_user_001_conv_001.json  zep_eval_test_user_001_conv_002.json  zep_eval_test_user_002_conv_001.json  zep_eval_test_user_002_conv_002.json
zep-eval-harness/data/documents/: hoa_guide.txt  home_buying_checklist.md  home_inspection_tips.txt  mortgage_types_guide.md
zep-eval-harness/data/telemetry/: zep_eval_test_user_001_searches.json  zep_eval_test_user_002_searches.json
zep-eval-harness/data/test_cases/: zep_eval_test_user_001_tests.json  zep_eval_test_user_002_tests.json
zep-eval-harness/eval_config/: constants.py  custom_instructions.py  ontology.py
zep-eval-harness/runs/1_20251108T151531/: evaluation_results_20251108T182048.json  manifest.json
zep-eval-harness/runs/1_20260328T160052/: evaluation_results_20260328T161155.json  manifest.json
(+1042 files in other folders)
