[project]
name = "zep-autogen"
version = "0.1.0"
description = "Autogen integration for Zep"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.6.1",
    "autogen-ext[azure,openai]>=0.6.1",
    "azure-identity>=1.23.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "python-slugify>=8.0.4",
    "rich>=14.0.0",
    "zep-cloud>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zep_autogen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]