[project]
name = "zep-pydantic-ai"
version = "0.1.0"
description = "Pydantic AI integration for Zep"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=1.107,<2",
    "zep-cloud>=3.23.0",
]

[project.urls]
Homepage = "https://github.com/getzep/zep"
Documentation = "https://help.getzep.com"
Repository = "https://github.com/getzep/zep"
"Bug Tracker" = "https://github.com/getzep/zep/issues"
Changelog = "https://github.com/getzep/zep/blob/main/integrations/pydantic-ai/python/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-asyncio",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zep_pydantic_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["zep_pydantic_ai"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "zep_cloud.*",
]
ignore_missing_imports = true
